corpus/class-and-field-rename.txt
======================
Class and field rename
======================

template T {
    class A {
        i = 0; 
    }
}

pack P {
    inst T { A -> B ( i -> j ) };
}

---
(program
    (template_declaration
        name: (identifier)
        body: (package_template_body
                (class_declaration
                    name: (type_identifier)
                    body: (class_body
                            (public_field_definition
                                name: (property_identifier)
                                value: (number))))))
    (package_declaration
        name: (identifier)
        body: (package_template_body
                (inst_statement
                    template_name: (identifier)
                    renamings: 
                                (class_renamings
                                    (class_rename 
                                        class: (rename
                                                    old: (identifier)
                                                    new: (identifier))
                                        fields: 
                                                (field_renamings
                                                    (rename
                                                        old: (identifier)
                                                        new: (identifier)))))))))
