corpus/inst-template-in-package.txt
==================================
Instantiating template in package
==================================

template T {
    class A {
        i = 0; 
    }
}

package P {
    inst T;
}

---
(program
    (template_declaration
        name: (identifier)
        body: (package_template_body
                (class_declaration
                    name: (type_identifier)
                    body: (class_body
                            (public_field_definition
                                name: (property_identifier)
                                value: (number))))))
    (package_declaration
        name: (identifier)
        body: (package_template_body
                (inst_statement
                    template_name: (identifier)))))
