corpus/inst-template-in-template.txt
==================================
Instantiating template in template
==================================

template T1 {
    class A {
        i = 0; 
    }
}

template T2 {
    inst T1;
}

---
(program
    (template_declaration
        name: (identifier)
        body: (package_template_body
                (class_declaration
                    name: (type_identifier)
                    body: (class_body
                            (public_field_definition
                                name: (property_identifier)
                                value: (number))))))
    (template_declaration
        name: (identifier)
        body: (package_template_body
                (inst_statement
                    template_name: (identifier)))))
